--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.4.RELEASE</version>
+    <version>2.2.5.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>dano.kotlin</groupId>
@@ -271,6 +271,10 @@
                       failonerror="false"
                       classname="io.gitlab.arturbosch.detekt.cli.Main"
                       classpathref="maven.plugin.classpath">
+                      <arg value="--config"/>
+                      <arg value="${basedir}/detekt-config.yml"/>
+                      <arg value="--baseline"/>
+                      <arg value="${basedir}/detekt-baseline.xml"/>
                       <arg value="--input"/>
                       <arg value="${basedir}/src/main/kotlin"/>
                       <arg value="--excludes"/>
@@ -279,8 +283,6 @@
                       <arg value="11"/>
                       <arg value="--report"/>
                       <arg value="xml:${project.build.directory}/detekt.xml"/>
-                      <arg value="--baseline"/>
-                      <arg value="${project.build.directory}/reports/baseline.xml"/>
                     </java>
                   </target>
                 </configuration>
