Add Swagger and validation support
Signed-off-by: Daniel Buchta <daniel.buchta@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,17 @@ spring:
   jpa:
     open-in-view: off
 
+application:
+
+
+#:description: ^project.description^
+#application-version: ^project.version^
+
 app:
   order:
     name: Foo
     version: Bar
     build: Test
+server:
+  servlet:
+    application-display-name:
