--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
   <properties>
     <java.version>11</java.version>
     <kotlin.version>1.3.61</kotlin.version>
+    <springfox.version>2.9.2</springfox.version>
   </properties>
 
   <dependencies>
@@ -94,6 +95,27 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${springfox.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>${springfox.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-bean-validators</artifactId>
+      <version>${springfox.version}</version>
+    </dependency>
+
     <!-- tests -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -130,6 +152,19 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>build-info</id>
+            <goals>
+              <goal>build-info</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.2.1</version>
       </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
@@ -155,28 +190,6 @@
             <version>${kotlin.version}</version>
           </dependency>
         </dependencies>
-        <executions>
-          <execution>
-            <id>kapt</id>
-            <goals>
-              <goal>kapt</goal>
-            </goals>
-            <configuration>
-              <sourceDirs>
-                <sourceDir>src/main/kotlin</sourceDir>
-                <sourceDir>src/main/java</sourceDir>
-              </sourceDirs>
-              <annotationProcessorPaths>
-                <!-- Specify your annotation processors here. -->
-                <annotationProcessorPath>
-                  <groupId>com.google.dagger</groupId>
-                  <artifactId>dagger-compiler</artifactId>
-                  <version>2.9</version>
-                </annotationProcessorPath>
-              </annotationProcessorPaths>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
